\newcommand{\PR}{\Sexpr[results=rd]{tools:::Rd_expr_PR(#1)}}

\name{NEWS}
\title{glmmADMB News}
\encoding{UTF-8}

\section{Changes in version 0.7.2.6}{
\itemize{
  \item fix scaling of RE standard deviations; add scale option to ranef
}
}

\section{Changes in version 0.7.2.5}{
\itemize{
  \item new binaries (ADMB r229)
  \item R calculation of phi, pre-transformation of fixed effect parameters
}
}

\section{Changes in version 0.7.2.4}{
 \itemize{
   \item Bug fixes in sys.result handling
   \item Retrieve and document information about orthogonalized
   fixed-effect parameters
   \item re-instituted informative error message for non-factor grouping
   variables
   \item added maxphase (-maxph) to admbControl
   \item further robustification of TPL file
   \item documentation cleanup/improvement
 }
}
\section{Changes in version 0.7.2 (2012-01-06)}{
  \itemize{
    \item updated TPL file; improved robustness, reduced warnings
    \item added get_bin_version
    \item improvements to reporting (drop unused levels in nested
  groups, better labeling of variance components and random effects, return 'alpha'
  (variance/scale parameter etc.) for all appropriate distributions);
  better formatting of RE variance-covariance matrices
  \item documented default link functions
  }
}

\section{Changes in version 0.7.1 (2011-12-28)}{
  \itemize{
    \item added logistic distribution, Gaussian (fixed stupid bug)!
    \item fixed bugs in predict function with offsets, documented predict.glmmadmb
  }
}

\section{Changes in version 0.7 (2011-12-18)}{
  \itemize{
    \item added R2admb dependency, removed copies of R2admb files
    \item improved vignette (hurdle and MCMC)
    \item improved labeling of MCMC output
    \item added test for MacOS <10.6
    \item fixed predict bug; enhanced predict (still needs documentation)
  }
}
  
\section{Changes in version 0.6.7.1 (2011-12-05)}{
  \itemize{
    \item SVN rev 158
    \item added debug flag, debugging statements